# fastapi-template

./: .env  .gitignore  Dockerfile  pyproject.toml  readme.md  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json
app/: main.py
