[tool.poetry]
name = "poetry add fastapi"
version = "0.1.0"
description = ""
authors = ["Yoichiro Abe <yoichiro.abe@avanade.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
